clusters/pi-k3s/romm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: romm
  namespace: romm
spec:
  type: ClusterIP
  selector:
    app: romm
  ports:
    - port: 8080
      targetPort: http
